<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@android:color/transparent"
        android:elevation="0dp"
        android:paddingStart="@dimen/toolbar_padding_start"
        android:paddingEnd="@dimen/toolbar_padding_end"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />

    <net.simno.klingar.ui.widget.SquareImageView
        android:id="@+id/player_background_image"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@+id/player_info"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/player_queue"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/player_info"
        android:layout_below="@id/toolbar"
        android:layout_margin="16dp" />

    <LinearLayout
        android:id="@+id/player_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/player_track_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:textColor="@color/title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/player_artist_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:textColor="@color/subtitle" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/player_elapsed_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true" />

            <SeekBar
                android:id="@+id/player_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/player_total_time"
                android:layout_toEndOf="@+id/player_elapsed_time" />

            <TextView
                android:id="@+id/player_total_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/player_controls"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:weightSum="5">

            <ImageView
                android:id="@+id/player_shuffle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:selectableItemBackgroundBorderless"
                android:contentDescription="@string/description_shuffle_off"
                android:scaleType="center"
                app:srcCompat="@drawable/player_shuffle" />

            <ImageView
                android:id="@+id/player_previous"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:selectableItemBackgroundBorderless"
                android:contentDescription="@string/description_previous"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/player_previous" />

            <ImageView
                android:id="@+id/player_play_pause"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:selectableItemBackgroundBorderless"
                android:contentDescription="@string/description_play"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/player_play_pause" />

            <ImageView
                android:id="@+id/player_next"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:selectableItemBackgroundBorderless"
                android:contentDescription="@string/description_next"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/player_next" />

            <ImageView
                android:id="@+id/player_repeat"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:selectableItemBackgroundBorderless"
                android:contentDescription="@string/description_repeat_off"
                android:scaleType="center"
                app:srcCompat="@drawable/player_repeat" />

        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/include_content_loading" />

</RelativeLayout>
